--- a/jaxb-ri/external/rngom/src/main/java/org/kohsuke/rngom/binary/package.html
+++ b/jaxb-ri/external/rngom/src/main/java/org/kohsuke/rngom/binary/package.html
@@ -21,6 +21,6 @@
 -->
 <html>
   <body>
-    Minimal binarized pattern object model (one example of <tt>ast.om</tt> implementation).
+    Minimal binarized pattern object model (one example of <code>ast.om</code> implementation).
   </body>
 </html>
